--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,4 +1,6 @@
 <h2><%= @task.title %></h2>
 <p><%= @task.details %></p>
 <p><%= @task.completed %></p>
+<li><%= link_to "Edit current task", edit_task_path(@task.id)%></li>
+<li><%= link_to "Delete current task", delete_task_path(@task.id), method: 'delete', data: { confirm: "Are you sure?" }  %></li>
 <li><%= link_to "Return to index", tasks_path%></li>
